# laser-ionization

./: .gitignore  DESCRIPTION.md  Laser.cc  Laser.hh  README.md
Example/: Example  Example.cc  makefile
ExampleGEM/: Avalanche  Avalanche.cc  ar_70_co2_30.gas  makefile
ExampleGEM/field/: ELIST.lis  MPLIST.lis  NLIST.lis  PRNSOL.lis
ExampleGEM/plots/: potential.eps
examples/basic/: CMakeLists.txt  basic.cc
examples/gem/: CMakeLists.txt  gem.cc
examples/gem/field/: single_gem.inp
include/: Function.hh  IntegrableFunction.hh  Laser.hh  Point3D.hh
src/: Function.cc  IntegrableFunction.cc  Laser.cc  Point3D.cc
